# binance_data_gatherer

./: Cargo.toml  log_config.yaml
src/: bucket_utils.rs  data_manager.rs  file_compress.rs  main.rs  settings.rs
src/binance/: rest.rs
src/binance/models/: mod.rs  orderbook.rs  trades.rs
src/binance/websocket/: connection.rs  requests.rs
src/binance/websocket/handlers/: depth_update.rs  trades.rs
src/tests/: compress.rs  mod.rs  websocket.rs
