[package]
name = "binance_data_gatherer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
[dependencies]
tokio = {version ="1.24.1", features = ["macros","sync","time","rt-multi-thread"]}
tokio-tungstenite = {version = "0.18.0", features = ["rustls-tls-native-roots"]}
log = {version = "0.4.17", features = ["std", "serde"] }
reqwest = {version = "0.11.13", features = ["json"] }
serde = {version = "1.0.152", features = ["derive"] }
log4rs = "1.2.0"
url = "2.3.1"
futures-util = "0.3.25"
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"] }
serde_with = { version = "2.1.0", features = ["chrono"] }
futures = "0.3.25"
rayon = "1.6.1"
rust_decimal = { version = "1.27.0", features = ["serde-with-str"] }
csv = "1.1.6"
itertools = "0.10.5"
bzip2 = "0.4.4"
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
once_cell = "1.17.0"